force-app/main/default/objects/DBM_Report_Grouping_Entry__c.object
<CustomObject>
    <fields>
        <fullName>Display_Label__c</fullName>
        <formula>BLANKVALUE( Link_to_Record__c , 
  IF( Display_as_Link__c ,  HYPERLINK(&quot;#&quot;, Name), Name ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display Label</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Display_as_Link__c</fullName>
        <formula>Grouping__r.Display_as_Link__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Display as Link</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>External_ID__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Grouping_Order__c</fullName>
        <label>Grouping Order</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grouping__c</fullName>
        <label>Grouping</label>
        <referenceTo>DBM_Report_Grouping__c</referenceTo>
        <relationshipLabel>DBM Report Grouping Entries</relationshipLabel>
        <relationshipName>DBM_Report_Grouping_Entries</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Link_to_Record__c</fullName>
        <formula>HYPERLINK(&quot;/&quot; + Record_ID__c , Name)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Link to Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_ID__c</fullName>
        <label>Record ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Report__c</fullName>
        <label>Report</label>
        <referenceTo>DBM_Report__c</referenceTo>
        <relationshipLabel>DBM Report Grouping Entries</relationshipLabel>
        <relationshipName>DBM_Report_Grouping_Entries</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>DBM_Report_Grouping_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>DBM Report Grouping Entry</label>
    <nameField>
        <label>DBM Report Grouping Entry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DBM Report Grouping Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>